# ISIRTaskManager

./: CMakeLists.txt  README.md
include/: CMakeLists.txt
include/ISIRTaskManager/: mathutils.hpp  taskxmlparser.hpp  trajectory.hpp
pkg-config/: CMakeLists.txt
src/: CMakeLists.txt  mathutils.cpp  taskxmlparser.cpp  trajectory.cpp
test/: CMakeLists.txt  fulljointcontrol1.xml  kukafixed.h  testquaternion.cpp  testxmlparser.cpp
