# Copyright 2014 ISIR-CNRS
# Authors: Sovannara HAK

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(ISIRTaskManager)

IF(NOT CMAKE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE Release)
ENDIF()

FIND_PACKAGE(PkgConfig)
PKG_CHECK_MODULES(TINYXML tinyxml)

IF(NOT TINYXML_FOUND)
    MESSAGE(FATAL_ERROR "tinyxml not found")
ENDIF()
