INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${TINYXML_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${ISIRController_INCLUDE_DIRS})
#INCLUDE_DIRECTORIES(${ORC_FRAMEWORK_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

LINK_DIRECTORIES(
    ${TINYXML_LIBRARY_DIRS}
    #${ORC_FRAMEWORK_LIBRARY_DIRS}
    ${ISIRController_LIBRARY_DIRS}
)

ADD_LIBRARY(
    ${PROJECT_NAME}
    ${LIB_TYPE}
    taskxmlparser.cpp
)

TARGET_LINK_LIBRARIES(
    ${PROJECT_NAME}
    ${TINYXML_LIBRARIES}
    #${ORC_FRAMEWORK_LIBRARIES}
    ${ISIRController_LIBRARIES}
)

INSTALL(
    TARGETS ${PROJECT_NAME}
    ${install_type} DESTINATION lib
)
